# terptracker-final

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
terptracker/constants/: DynamoDbConstants.py
terptracker/dynamodb/: TerpTrackerDb.py  dynamodb_helpers.py
terptracker/dynamodb/tables/: AppLoginTable.py  ExpenseTable.py
terptracker/website/: __init__.py  auth.py  models.py  summary.py  views.py
terptracker/website/templates/: base.html  home.html  login.html  pie_chart.html  sign_up.html  summary.html  summary_table.html
